# plai

./: .gitignore  README.md  ffmpeg_lib.py  main.py  pyproject.toml  video_editor.py
api/: README.md  __init__.py  app.py  schemas.py
api/routes/: __init__.py  sync.py
api/services/: __init__.py  storage.py  sync.py
core/: cli.py  video_editor.py
docs/: PHASE0.md  PHASE0_PROGRESS.md  ROADMAP.md
docs/ui-api/: PHASEA.md  PHASEA_PROGRESS.md  ROADMAP.md
docs/video-analysis/: PHASE0.md  PHASE0_PROGRESS.md  ROADMAP.md
examples/: check_ingest.py  check_normalization.py
frontend/angular/: README.md
plai/: __init__.py  cli.py  config.py
plai/classification/: __init__.py  lift_classifier.py
plai/io/: __init__.py  ingest.py  normalization.py
plai/overlay/: __init__.py  annotations.py
plai/quality/: __init__.py  confidence.py  failures.py
plai/repdetect/: __init__.py  baseline.py
plai/signals/: __init__.py  kinematics.py  quality.py  smoothing.py
plai/sync/: __init__.py  events.py
plai/vision/: __init__.py  cache.py  keypoints.py
tests/: __init__.py  test_ingest.py  test_normalization.py  test_pose_cache.py
