[project]
name = "plai"
version = "0.0.0"
description = "Powerlifting video analysis pipeline feeding FFmpeg-based composition."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

# Dependencies will be added incrementally as implementations land.
dependencies = [
    "fastapi>=0.109.0,<0.112.0",
    "uvicorn[standard]>=0.23.0,<0.30.0",
    "pydantic>=2.5.0,<3.0.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
